--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eG7-pg-TJz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eG7-pg-TJz">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -925,7 +925,7 @@
                                                             <color key="textColor" red="0.60392156862745094" green="0.60392156862745094" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USER STORY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nnl-P7-aIU" customClass="BadgeViewStyle" customModule="LoLympics" customModuleProvider="target">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Story" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nnl-P7-aIU" customClass="BadgeViewStyle" customModule="LoLympics" customModuleProvider="target">
                                                             <rect key="frame" x="279" y="15" width="80" height="18"/>
                                                             <animations/>
                                                             <color key="backgroundColor" red="0.38431372549999998" green="0.73333333329999995" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -1024,6 +1024,9 @@
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DHL-fE-3S8" userLabel="postShareBtn">
                                                             <rect key="frame" x="310" y="352" width="49" height="49"/>
                                                             <animations/>
+                                                            <connections>
+                                                                <action selector="postShareAction:" destination="suH-sr-8Qn" eventType="touchUpInside" id="0St-MM-oeE"/>
+                                                            </connections>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Another 10 places in the shooting competition at the Rio 2016 Olympic Games were confirmed at the Shotgun World ..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OPi-mu-CIe">
                                                             <rect key="frame" x="16" y="95" width="343" height="36"/>
@@ -1099,6 +1102,8 @@
                                         <color key="backgroundColor" red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="categoryLbl" destination="Nnl-P7-aIU" id="puB-Ug-abK"/>
+                                            <outlet property="commentCount" destination="022-SA-5WX" id="Z38-0P-qe4"/>
+                                            <outlet property="commentIcon" destination="ibp-PV-L7V" id="1Pt-4U-RRa"/>
                                             <outlet property="dateLbl" destination="iAd-vz-K59" id="kH1-cV-9Cd"/>
                                             <outlet property="excerptLbl" destination="OPi-mu-CIe" id="rAm-ok-3II"/>
                                             <outlet property="featuredImg" destination="yeV-02-6Kc" id="aKW-pR-1lH"/>
@@ -1243,10 +1248,6 @@
                                                 <constraint firstAttribute="height" constant="234" id="FNS-lU-37R"/>
                                             </constraints>
                                         </view>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Js9-ug-cmS" userLabel="postShareBtn">
-                                            <rect key="frame" x="310" y="208" width="49" height="49"/>
-                                            <animations/>
-                                        </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GXK-1z-36L">
                                             <rect key="frame" x="16" y="248" width="10" height="14"/>
                                             <animations/>
@@ -1317,6 +1318,13 @@
                                                 <constraint firstAttribute="width" constant="49" id="oWm-DO-Dc9"/>
                                             </constraints>
                                         </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Js9-ug-cmS" userLabel="postShareBtn">
+                                            <rect key="frame" x="310" y="208" width="49" height="49"/>
+                                            <animations/>
+                                            <connections>
+                                                <action selector="postShareAction:" destination="iap-FA-Wmr" eventType="touchUpInside" id="Iw3-zd-TzG"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <animations/>
                                     <constraints>
