--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eG7-pg-TJz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yu8-mF-eP9">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -1494,7 +1494,7 @@
                                     <constraint firstItem="shx-ap-S8I" firstAttribute="centerY" secondItem="bAl-hu-ME2" secondAttribute="centerY" id="yjv-K6-68a"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USER STORY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMe-8C-O9Z" customClass="BadgeViewStyle" customModule="LoLympics" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USER STORY" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMe-8C-O9Z" customClass="BadgeViewStyle" customModule="LoLympics" customModuleProvider="target">
                                 <rect key="frame" x="279" y="36" width="80" height="18"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.38431372549999998" green="0.73333333329999995" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -1502,7 +1502,7 @@
                                     <constraint firstAttribute="height" constant="18" id="ZwI-Nz-paF"/>
                                     <constraint firstAttribute="width" constant="80" id="agy-nb-LWq"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1573,7 +1573,7 @@
                     <size key="freeformSize" width="375" height="700"/>
                     <connections>
                         <outlet property="backBtnLbl" destination="Jhe-zD-65Z" id="BS3-K2-hTc"/>
-                        <outlet property="categoryLbl" destination="OMe-8C-O9Z" id="1dZ-pe-38S"/>
+                        <outlet property="categoryLbl" destination="OMe-8C-O9Z" id="ex6-qu-Xfq"/>
                         <outlet property="commentTextField" destination="bAl-hu-ME2" id="7WZ-pM-CQ8"/>
                         <outlet property="contentField" destination="tWp-PC-pEp" id="kNx-Cg-g59"/>
                         <outlet property="headerImage" destination="wsd-aa-f3j" id="Ky6-mS-ZL4"/>
@@ -1586,9 +1586,60 @@
             </objects>
             <point key="canvasLocation" x="2116.5" y="226"/>
         </scene>
+        <!--ViewerVC-->
+        <scene sceneID="G0s-0J-Awi">
+            <objects>
+                <viewController id="Yu8-mF-eP9" customClass="ViewerVC" customModule="LoLympics" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2cK-sx-Bik"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q35-QU-38C"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7ck-k6-7Nz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gC7-UR-6Ap">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-logo" translatesAutoresizingMaskIntoConstraints="NO" id="3WI-gk-Dm7">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="3WI-gk-Dm7" secondAttribute="bottom" id="BUr-21-Scb"/>
+                                    <constraint firstItem="3WI-gk-Dm7" firstAttribute="centerX" secondItem="gC7-UR-6Ap" secondAttribute="centerX" id="Cy4-JL-hwf"/>
+                                    <constraint firstItem="3WI-gk-Dm7" firstAttribute="leading" secondItem="gC7-UR-6Ap" secondAttribute="leading" id="Kqo-uW-snl"/>
+                                    <constraint firstAttribute="trailing" secondItem="3WI-gk-Dm7" secondAttribute="trailing" id="b85-QV-Bbd"/>
+                                    <constraint firstItem="3WI-gk-Dm7" firstAttribute="centerY" secondItem="gC7-UR-6Ap" secondAttribute="centerY" id="cHi-No-egQ"/>
+                                    <constraint firstItem="3WI-gk-Dm7" firstAttribute="top" secondItem="gC7-UR-6Ap" secondAttribute="top" id="uO2-4R-TlV"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="Yu8-mF-eP9" id="JZc-Or-G4k"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gC7-UR-6Ap" firstAttribute="leading" secondItem="7ck-k6-7Nz" secondAttribute="leading" id="0KD-S4-Yxr"/>
+                            <constraint firstAttribute="trailing" secondItem="gC7-UR-6Ap" secondAttribute="trailing" id="dUu-sd-HHs"/>
+                            <constraint firstItem="gC7-UR-6Ap" firstAttribute="bottom" secondItem="Q35-QU-38C" secondAttribute="top" id="exD-P7-Ne2"/>
+                            <constraint firstItem="gC7-UR-6Ap" firstAttribute="top" secondItem="7ck-k6-7Nz" secondAttribute="top" id="fgy-Pg-fez"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="500"/>
+                    <connections>
+                        <outlet property="imageView" destination="3WI-gk-Dm7" id="HcJ-wq-Dke"/>
+                        <outlet property="scrollView" destination="gC7-UR-6Ap" id="wdb-TT-wXi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dFh-aA-eJw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1880.5" y="-465"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="avatar" width="49" height="49"/>
+        <image name="avatar" width="50" height="50"/>
         <image name="footer_bg" width="375" height="64"/>
         <image name="header_bg" width="375" height="87"/>
         <image name="login-logo" width="597" height="648"/>
