--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yu8-mF-eP9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eG7-pg-TJz">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -7,6 +7,7 @@
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="ionicons.ttf">
+            <string>Ionicons</string>
             <string>Ionicons</string>
             <string>Ionicons</string>
             <string>Ionicons</string>
@@ -960,7 +961,7 @@
                                                                 </mask>
                                                             </variation>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mask" translatesAutoresizingMaskIntoConstraints="NO" id="yeV-02-6Kc">
+                                                        <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mask" translatesAutoresizingMaskIntoConstraints="NO" id="yeV-02-6Kc">
                                                             <rect key="frame" x="0.0" y="144" width="375" height="234"/>
                                                             <animations/>
                                                             <constraints>
@@ -1153,9 +1154,11 @@
                     <connections>
                         <outlet property="tableView" destination="KfR-Qj-BWx" id="BOl-GP-fgL"/>
                         <segue destination="iap-FA-Wmr" kind="show" identifier="DetailVC" id="idt-5R-7GN"/>
+                        <segue destination="Yu8-mF-eP9" kind="presentation" identifier="ViewerVC" modalPresentationStyle="fullScreen" modalTransitionStyle="partialCurl" id="tqm-Hi-gbU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xxL-eY-nTM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="IOY-AV-RZ4"/>
             </objects>
             <point key="canvasLocation" x="1652.5" y="209.5"/>
         </scene>
@@ -1577,12 +1580,15 @@
                         <outlet property="commentTextField" destination="bAl-hu-ME2" id="7WZ-pM-CQ8"/>
                         <outlet property="contentField" destination="tWp-PC-pEp" id="kNx-Cg-g59"/>
                         <outlet property="headerImage" destination="wsd-aa-f3j" id="Ky6-mS-ZL4"/>
+                        <outlet property="imageViewer" destination="JNJ-zQ-zII" id="pbp-uW-uCe"/>
                         <outlet property="postDate" destination="71W-YC-9sQ" id="VtP-pD-O3r"/>
                         <outlet property="tableView" destination="0XQ-z1-eaP" id="iRu-2W-1ux"/>
                         <outlet property="titleLbl" destination="WYt-yG-hQQ" id="IHb-lf-ycV"/>
+                        <segue destination="Yu8-mF-eP9" kind="presentation" identifier="ViewerVC" modalPresentationStyle="fullScreen" modalTransitionStyle="partialCurl" id="9OC-pK-jr8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ssq-GF-25Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="bfn-3x-CIK"/>
             </objects>
             <point key="canvasLocation" x="2116.5" y="226"/>
         </scene>
@@ -1617,14 +1623,38 @@
                                     <outlet property="delegate" destination="Yu8-mF-eP9" id="JZc-Or-G4k"/>
                                 </connections>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ohv-FE-uhD">
+                                <rect key="frame" x="325" y="20" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="e15-1w-dPl"/>
+                                    <constraint firstAttribute="width" constant="50" id="xzS-4L-ZJk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Ionicons" family="Ionicons" pointSize="24"/>
+                                <state key="normal" title="">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="closeViewerAction:" destination="Yu8-mF-eP9" eventType="touchUpInside" id="Tai-pR-Bhr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="gC7-UR-6Ap" firstAttribute="leading" secondItem="7ck-k6-7Nz" secondAttribute="leading" id="0KD-S4-Yxr"/>
+                            <constraint firstItem="Ohv-FE-uhD" firstAttribute="top" secondItem="2cK-sx-Bik" secondAttribute="bottom" id="MvO-pA-XKc"/>
+                            <constraint firstAttribute="trailing" secondItem="Ohv-FE-uhD" secondAttribute="trailing" id="RC1-HM-lfN"/>
                             <constraint firstAttribute="trailing" secondItem="gC7-UR-6Ap" secondAttribute="trailing" id="dUu-sd-HHs"/>
                             <constraint firstItem="gC7-UR-6Ap" firstAttribute="bottom" secondItem="Q35-QU-38C" secondAttribute="top" id="exD-P7-Ne2"/>
                             <constraint firstItem="gC7-UR-6Ap" firstAttribute="top" secondItem="7ck-k6-7Nz" secondAttribute="top" id="fgy-Pg-fez"/>
+                            <constraint firstItem="Ohv-FE-uhD" firstAttribute="centerX" secondItem="gC7-UR-6Ap" secondAttribute="centerX" id="lep-80-mnW"/>
+                            <constraint firstItem="Ohv-FE-uhD" firstAttribute="centerY" secondItem="gC7-UR-6Ap" secondAttribute="centerY" id="w1V-g9-jiq"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="lep-80-mnW"/>
+                                <exclude reference="w1V-g9-jiq"/>
+                            </mask>
+                        </variation>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="500"/>
@@ -1635,7 +1665,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dFh-aA-eJw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1880.5" y="-465"/>
+            <point key="canvasLocation" x="1686.5" y="-567"/>
         </scene>
     </scenes>
     <resources>
@@ -1647,5 +1677,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4f7-EL-GCu"/>
+        <segue reference="9OC-pK-jr8"/>
     </inferredMetricsTieBreakers>
 </document>
