--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -894,6 +894,24 @@
                                 <rect key="frame" x="0.0" y="81" width="375" height="586"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="uxD-m4-WAj">
+                                    <rect key="frame" x="0.0" y="459" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ybo-dE-C1X">
+                                            <rect key="frame" x="173" y="7" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="7ax-xL-DZd"/>
+                                                <constraint firstAttribute="width" constant="30" id="yFq-LF-ryr"/>
+                                            </constraints>
+                                        </activityIndicatorView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="ybo-dE-C1X" firstAttribute="centerY" secondItem="uxD-m4-WAj" secondAttribute="centerY" id="C85-1a-GA7"/>
+                                        <constraint firstItem="ybo-dE-C1X" firstAttribute="centerX" secondItem="uxD-m4-WAj" secondAttribute="centerX" id="V3t-ex-S1I"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="431" id="suH-sr-8Qn" customClass="PostCell" customModule="LoLympics" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="431"/>
@@ -1186,6 +1204,8 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="ybo-dE-C1X" id="pVF-9E-gKw"/>
+                        <outlet property="tableFooterView" destination="uxD-m4-WAj" id="WBl-BJ-n41"/>
                         <outlet property="tableView" destination="KfR-Qj-BWx" id="BOl-GP-fgL"/>
                         <segue destination="iap-FA-Wmr" kind="show" identifier="DetailVC" id="idt-5R-7GN"/>
                         <segue destination="Yu8-mF-eP9" kind="presentation" identifier="ViewerVC" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="tqm-Hi-gbU"/>
